#
# Hyenae
#   Advanced Network Packet Generator
#
# Copyright (C) 2009  Robin Richter
#
#   Contact  : richterr@users.sourceforge.net
#   Homepage : http://sourceforge.net/projects/hyenae/
#
# This file is part of Hyenae.
#
# Hyenae is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hyenae is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Hyenae.  If not, see <http://www.gnu.org/licenses/>.
#

bin_PROGRAMS = \
  hyenae \
  hyenaed

#
# hyenae
#

hyenae_LDADD = ${LIBS}

hyenae_SOURCES = \
  hyenae.h hyenae.c \
  hyenae-remote.h hyenae-remote.c \
  hyenae-common.h hyenae-common.c \
  hyenae-protocol.h hyenae-protocol.c \
  hyenae-eth.h hyenae-eth.c \
  hyenae-arp.h hyenae-arp.c \
  hyenae-ip.h hyenae-ip.c \
  hyenae-icmp.h hyenae-icmp.c \
  hyenae-tcp.h hyenae-tcp.c \
  hyenae-udp.h hyenae-udp.c \
  hyenae-dhcp.h hyenae-dhcp.c \
  hyenae-attack.h hyenae-attack.c \
  hyenae-patterns.h hyenae-patterns.c \
  hyenae-config.h hyenae-config.c \
  hyenae-base.h hyenae-base.c

#
# hyenaed
#

hyenaed_LDADD = ${LIBS}

hyenaed_SOURCES = \
  hyenaed.h hyenaed.c \
  hyenaed-daemon.h hyenaed-daemon.c \
  hyenae-common.h hyenae-common.c \
  hyenae-protocol.h hyenae-protocol.c \
  hyenae-eth.h hyenae-eth.c \
  hyenae-arp.h hyenae-arp.c \
  hyenae-ip.h hyenae-ip.c \
  hyenae-icmp.h hyenae-icmp.c \
  hyenae-tcp.h hyenae-tcp.c \
  hyenae-udp.h hyenae-udp.c \
  hyenae-dhcp.h hyenae-dhcp.c \
  hyenae-attack.h hyenae-attack.c \
  hyenae-patterns.h hyenae-patterns.c \
  hyenae-config.h hyenae-config.c \
  hyenae-base.h hyenae-base.c
